@@ -3,9 +3,14 @@
     xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
     xmlns:five="http://namespaces.zope.org/five"
     xmlns:upgrade-step="http://namespaces.zope.org/ftw.upgrade"
+    xmlns:browser="http://namespaces.zope.org/browser"
     i18n_domain="ftw.iframefix">
 
+    <browser:resourceDirectory name="ftw.iframefix" directory="resources" />
+
     <five:registerPackage package="." initialize=".initialize" />
+
+    <include file="resources/resources.zcml" />
 
     <genericsetup:registerProfile
         name="default"
@@ -23,6 +28,7 @@
         />
 
     <include package="ftw.upgrade" file="meta.zcml" />
+
     <upgrade-step:directory
         profile="ftw.iframefix:default"
         directory="upgrades"
