@@ -5,4 +5,11 @@ Changelog
 1.0.0 (unreleased)
 --------------------
 
+- Introduce iframe fixes.
+
+  - webkit iframe resize bug
+  - ie iframe pointer events propagation
+
+[Kevin Bieri]
+
 - Initial implementation.
